<resources>
    <string name="app_name">Energy House</string>

    <string name="energyButton">Energy</string>
    <string name="recycleButton">Recycling</string>
    <string name="transportButton">Transportation</string>
    <string name="energyTitle">Energy Usage Assistant</string>
    <string name="calculateTotalButton">Calculate Total Energy Consumption</string>
    <string name="applianceName">Name of appliance</string>
    <string name="numberOfApplianceHint">Number of appliances</string>
    <string name="powerConsumptionHint">Power Consumption(Watts)</string>
    <string name="hoursUsedHint">Average daily usage (hours)</string>
    <string name="roomListHeader">Enter in energy usage estimate for each appliance in building</string>
    <string name="powerEstHeader">Energy Usage Estimate</string>
    <string name="energyConsumedhint">enter amount of energy consumed(kWh)</string>
    <string name="perDay">Per Day</string>
    <string name="perWeek">Per Week</string>
    <string name="perMonth">Per Month</string>
    <string name="solarActivityHeader">Select Solar cell type and enter amount of energy usage to get estimate</string>
    <string name="menu">Energy House Main Menu</string>
    <string name="goToCalcEnergy">Calculate Home Appliance Energy Usage</string>
    <string name="goToSolarEst">Calculate Estimate for Solar Energy</string>
    <!-- Home appliances -->
    <string name="applianceLight">light bulbs</string>
    <string name="applianceTV">Television</string>
    <string name="applianceFan">Fan</string>
    <string name="applianceAC">Air conditioner</string>
    <string name="applianceHeater">Space heater</string>
    <string name="applianceKitchenMicrowave">Microwave</string>
    <string name="applianceKitchenOven">Oven</string>
    <string name="applianceKitchenRefrigerator">Refrigerator</string>
    <string name="applianceKitchenDishwasher">Dishwasher</string>
    <string name="applianceWashingMachine">Washing Machine</string>
    <string name="applianceDryer">Dryer</string>
=======
    <string name="EnergyButton">Energy</string>
    <string name="RecycleButton">Recycling</string>
    <string name="Transportation">Transportation</string>
    <string name="EnergyTitle">Energy Summary</string>
    <string name="CalculateTotalButton">Calculate Total Energy Consumption</string>
    <string name="NumberOfApplianceHint">Number of Appliances</string>
    <string name="EnergyUsageHint">Power Consumption</string>
    <string name="EnterInRoomAppliances">Enter in appliance used in rooms</string>
    <string name="fuel_log">Fill-Up Log</string>
    <string name="date">Date</string>
    <string name="gallons">Gallons</string>
    <string name="pricePerGallon">Price Per Gallon</string>
    <string name="odometerReading">"Odometer Reading: "</string>
    <string name="save">Save</string>
    <string name="newUserSetup">New User Setup</string>
    <string name="unitOfVolume">Units of Volume</string>
    <string name="liters">Liters</string>
    <string name="unitsOfDistance">Units of Distance</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="priceOfElectricity">Price of Electricity</string>
    <string name="done">Done</string>
    <string name="selectACar">Select a Car</string>
    <string name="need_gpsPerms">In order to proceed you need to enable GPS permissions for this app on this device</string>
    <string name="carSelectInstructions">Select a car that you would like to use to compare your transporation savings by switching to a more ecological mode of transporation</string>
    <string name="number_of_gallons">Number of Gallons:</string>
    <string name="total_cost">Total Cost:</string>


    <!-- Dennis's Strings -->
    <string name="where_to_recycle">Where to recycle?</string>
    <string name="calc_recyclables">Calculate your recyclables</string>
    <string name="what_goes_where">What goes where?</string>
    <string name="impact_tracker">Impact tracker</string>
    <string name="enter_recyclables_impact">Enter pounds of recyclables</string>
    <string name="add_to_log">Add to log</string>
    <string name="pounds_paper">Pounds of paper:</string>
    <string name="pounds_mixed">Pounds of mixed recyclables:</string>
    <string name="num_trees">Number of trees</string>
    <string name="gallons_oil">Gallons of oil</string>
    <string name="hours_elec">Hours of electricity</string>
    <string name="gallons_water">Gallons of water</string>
    <string name="calc_value">Calculate Value</string>
    <string name="pounds_alum">Pounds of aluminum cans:</string>
    <string name="pounds_PET">Pounds of clear PET bottles:</string>
    <string name="pounds_HDPE">Pounds of HDPE plastic bottles:</string>
    <string name="pounds_glass">Pounds of glass bottles:</string>
    <string name="value_amt">Total value:</string>
    <string name="what_goes_where_instructions">Please select an item from the following for more information.</string>
    <string name="clear_log">Clear log</string>
    <string name="entry_num">Entry number: </string>
    <string name="invalid_impact">Please enter all information.</string>
    <string name="see_report">Transportation Report</string>
    <string name="find_charging_stations">Nearest Charging Station</string>
    <string name="log_fillup">Log Fillup</string>
    <string name="nearest_charging_station">Nearest Charging Station</string>
    <string name="fuel_report_title">Fossil Fuel Consuption Report</string>
    <string name="report_from">From:</string>
    <string name="to">To:</string>
    <string name="total_fuel_used">Total Fossil Fuel Used:</string>
    <string name="total_distance_driven">Total Distance Driven:</string>
    <string name="total_spent">Total Spent:</string>
    <string name="kw_energy_used">"Total Kilowatts: "</string>
    <string name="data_reported">Data Reported</string>
    <string name="to_report">To Report</string>
    <string name="comparison">Comparison</string>
    <string name="travel_equivalent">Travel Equivalent:</string>
    <string name="cost_equivalent">Cost Equivalent</string>
    <string name="cost_per_mile" >"Cost Per Mile: "</string>
    <string name="reset">Reset</string>
    <!-- End of Dennis's Strings -->
</resources>
